# dha-ps

./: .gitignore  Makefile  README.rst
.circleci/: config.yml
.github/: dependabot.yml
deploy/: docker-compose.yml  gcp.yml  minikube.yml  swaggerui-helm.yml
ingress/: .dockerignore  Dockerfile  README.rst  go.mod  go.sum  server.go
ingress/api/handlers/: attributes.go  attributes_test.go  products.go  utils.go
ingress/api/httputil/: errors.go
ingress/api/middleware/: auth.go  cors.go  middleware.go  middleware_test.go
ingress/docs/: attributes.go  docs.go  index.html  products.go  swagger.json  swagger.yml
ingress/docs/rest/: attributes.go  errors.go  products.go
ingress/internal/models/: attributes.go  products.go
ingress/internal/schema/: copy.sql  (+1 more)
price_recommender/: .dockerignore  Dockerfile  README.rst  main.py  pyproject.toml  requirements.txt
price_recommender/api/: mux.py
price_recommender/api/handlers/: attributes.py  products.py
price_recommender/core/: config.py  events.py  logging.py
price_recommender/internal/domains/: attributes.py  common.py  products.py
price_recommender/internal/repository/: drivers.py  processing.py  utils.py
price_recommender/internal/repository/mongodb/: common.py  corpus.py  orders.py
price_recommender/nlp/: helpers.py  net.py
price_recommender/nlp/distilbert-base-nli-stsb-mean-tokens/: modules.json
price_recommender/nlp/distilbert-base-nli-stsb-mean-tokens/0_Transformer/: config.json  tokenizer_config.json
price_recommender/nlp/models/: DistilBERT.py  Pooling.py  Transformer.py  __init__.py
(+12 files in other folders)
